--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Isabelle Community Contribution Guidelines
+title: Verified Textbook Algorithms - A Biased Survey
 header_pages: [] 
