--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: Verified Textbook Algorithms - A Biased Survey
+title: Verified Textbook Algorithms
+subtitle: A Biased Survey
 header_pages: [] 
